--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
     "styled-components": "^6.1.8"
